--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,14 +1,14 @@
 // These colors are specific to the theme. Do not use in a package!
-@very-light-gray: #c5c8c6;
-@light-gray     : #969896;
-@gray           : #373b41;
-@dark-gray      : #282a2e;
-@very-dark-gray : #1a262b;
-@cyan           : #5ae7f1;
-@blue           : #63b1f3;
+@very-light-gray: #999;
+@light-gray     : #888;
+@gray           : #777;
+@dark-gray      : #666;
+@very-dark-gray : #333;
+@cyan           : #0b6898;
+@blue           : #0081ef;
 @purple         : #a063e2;
-@green          : #44c7a5;
-@light-green    : #00ffbd;
+@green          : #048c69;
+@light-green    : #0077bd;
 @red            : #cc6666;
 @orange         : #de935f;
-@light-orange   : #f0c674;
+@light-orange   : #c77e1c;
