--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -3,7 +3,7 @@
 // General colors
 @syntax-text-color                      : @very-light-gray;
 @syntax-cursor-color                    : white;
-@syntax-selection-color                 : lighten(@dark-gray, 10%);
+@syntax-selection-color                 : darken(white, 10%);
 @syntax-background-color                : white; // Guide colors
 @syntax-wrap-guide-color                : @dark-gray;
 @syntax-indent-guide-color              : @gray;
