--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -2,7 +2,7 @@
 // include a syntax-variables.less file.
 // General colors
 @syntax-text-color                      : @very-light-gray;
-@syntax-cursor-color                    : white;
+@syntax-cursor-color                    : black;
 @syntax-selection-color                 : darken(white, 10%);
 @syntax-background-color                : white; // Guide colors
 @syntax-wrap-guide-color                : @dark-gray;
