--- a/styles/colors.less
+++ b/styles/colors.less
@@ -9,6 +9,6 @@
 @purple         : #a063e2;
 @green          : #048c69;
 @light-green    : #0077bd;
-@red            : #cc6666;
+@red            : #f72525;
 @orange         : #de935f;
 @light-orange   : #c77e1c;
