--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,7 +1,7 @@
 @import "colors"; // This defines all syntax variables that syntax themes must implement when they
 // include a syntax-variables.less file.
 // General colors
-@syntax-text-color                      : @very-light-gray;
+@syntax-text-color                      : @dark-gray;
 @syntax-cursor-color                    : black;
 @syntax-selection-color                 : darken(white, 10%);
 @syntax-background-color                : white; // Guide colors
